SVG relayout problem when displayed with different image box heights https://bugs.webkit.org/show_bug.cgi?id=118140

Patch by Morten Stenshorne <mstensho@opera.com> on 2013-06-28
Reviewed by Philip Rogers.

Source/WebCore:

If the root element is an SVG, its position and height are affected
by the view height.

Test: svg/as-image/same-source-different-height.html

* rendering/RenderView.cpp:
(WebCore::RenderView::layout):

LayoutTests:

* svg/as-image/same-source-different-height-expected.html: Added.
* svg/as-image/same-source-different-height.html: Added.

Canonical link: https://commits.webkit.org/136232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152178 268f45cc-cd09-0410-ab3c-d52691b4dbfc